--- a/style.css
+++ b/style.css
@@ -10,3 +10,27 @@ body{
   margin: 0px;
   padding: 0px;
 }
+
+#main_cont{
+  width: 100%;
+  height: 100px;
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+  text-align: center;
+  font-family: "fangsong";
+  font-size: 35px;
+  font-weight: bold;
+}
+
+#headimg{
+  z-index:1;
+  width:100%;
+  height:20%;
+  margin:0px;
+  left:0px;
+  padding:0px;
+  float:top;
+  -webkit-filter: blur(4px);
+  filter: blur(4px);
+}
