--- a/style.css
+++ b/style.css
@@ -31,5 +31,66 @@ body{
   padding:0px;
   float:top;
   -webkit-filter: blur(4px);
-  filter: blur(4px);
+  filter: blur(5px);
+}
+
+.dropbtn {
+  z-index: 7;
+  position: absolute;
+  background-color: transparent;
+  padding: 16px;
+  font-size: 10px;
+  border: 1px solid white;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: absolute;
+  top: 75px;
+  right: 250px;
+  display: inline-block;
+    font-weight: normal;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 7;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 8px 10px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+canvas {
+    border: 1px solid black;
+}
+
+#title{
+    z-index: 6;
+    position: absolute;
+    top: 10px;
+    color: white;
+    width: 100%;
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+    border-left: 0px solid white;
+    border-right: 0px solid white;
 }
