--- a/home.css
+++ b/home.css
@@ -1,37 +1,35 @@
-#me {
+#main {
   position: absolute;
+  margin: 70px;
+  top: 120px;
+  width: 75%;
   height: 400px;
-  padding: 10px;
-  left: 70px;
-  top: 280px;
-  border-width: 5px;
-  border-style: solid;
 }
 
-#me_accent {
-  position: absolute;
-  width: 385px;
-  background-color: rgb(186, 204, 196);
-  height: 270px;
-  top: 360px;
-  left: 55px;
+th {
+  width: 50%;
+  font-size: small;
+  font-weight:lighter;
 }
+
+#me {
+  height: auto;
+  width: 90%;
+  margin-right: 30px;
+}
+
 
 #sig {
-  position: absolute;
-  width: 210px;
-  top: 640px;
-  left: 630px;
+  width: 40%;
+  padding-top: 10px;
+  margin-right: 60%;
 }
 
 #greet {
-  position: absolute;
-  top: 320px;
-  left: 530px;
-  padding: 10px;
-  width: 500px;
+  text-align: left;
+  padding: 5px;
+  width: 100%;
 }
 
 #hi {
   font-size: larger;
-}
