--- a/basic.css
+++ b/basic.css
@@ -47,10 +47,20 @@ embed {
 #top_accent {
   position: absolute;
   background-color: rgb(186, 204, 196);
-  height: 175px;
-  width: 9%;
-  right: 0px;
-  top: 30px;
+  height: 50px;
+  width: 800px;
+  top:150px;
+}
+
+@media only screen and (min-width: 816px) {
+  #top_accent {
+    position: absolute;
+    background-color: rgb(186, 204, 196);
+    height: 175px;
+    width: 9%;
+    right: 0px;
+    top: 30px;
+  }
 }
 
 #pages {
@@ -107,8 +117,16 @@ embed {
 }
 
 #CPU1 {
-  position: absolute;
-  right: 0px;
-  height: auto;
-  width:30%
+  visibility: hidden;
 }
+
+@media only screen and (min-width: 816px) {
+  #CPU1 {
+    visibility: visible;
+    position: absolute;
+    right: 0px;
+    height: auto;
+    width:30%
+  }
+}
+
