--- a/links.css
+++ b/links.css
@@ -2,21 +2,14 @@ th {
   width: 33%;
   padding-bottom: 10%;
   min-width: 300px;
+  vertical-align: top;
 }
 
 
 #links_tab {
   position: absolute;
   width: 90%;
-  left: 8%;
   top: 190px;
-}
-
-.link_accent {
-  width: 70%;
-  height: 220px;
-  background-color: rgb(186, 204, 196);
-  margin-left: 5%;
 }
 
 .art_link {
@@ -24,15 +17,17 @@ th {
 }
 
 .link_name {
-  font-weight: bolder;;
+  font-weight: bolder;
   color: black;
   margin: 10%;
-  margin-bottom: -115px;
-  width: 60%;
+  margin-bottom: 0px;
+  width: 80%;
   margin-top: 5px;
   border-style: solid;
+  border-width: 2px;
   border-top-width: 0px;
-  padding: 0px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .description {
@@ -40,18 +35,19 @@ th {
   text-align: left;
   font-size: smaller;
   font-weight: lighter;
-  width: 60%;
-  margin-left: 12%;
-  margin-top: -100px;
+  width: 70%;
+  margin-left: 15%;
 }
 
 .link_img {
   margin: 20px;
   margin-left: 10%;
-  width: 70%;
-  margin-bottom: -5px;
+  margin-right: 10%;
+  margin-bottom: -10px;
+  width: 80%;
   border-style: solid;
-  border-width: 10px;
+  border-width: 2px;
+  border-bottom-width: 0px;
   border-color: black;
   padding: 0px;
 }
