--- a/links.css
+++ b/links.css
@@ -1,15 +1,23 @@
 th {
-  width: 33%;
-  padding-bottom: 10%;
-  min-width: 300px;
+  padding-bottom: 1%;
+  min-width: 250px;
+  width: 250px;
   vertical-align: top;
+  border: 1px;
+  border-style: outset;
+  border-color: lightgrey;
 }
-
 
 #links_tab {
   position: absolute;
   width: 90%;
   top: 190px;
+  border-spacing: 80px 20px;
+}
+
+.date {
+  color: black;
+  padding-top: 30px;
 }
 
 .art_link {
@@ -19,35 +27,27 @@ th {
 .link_name {
   font-weight: bolder;
   color: black;
-  margin: 10%;
-  margin-bottom: 0px;
   width: 80%;
-  margin-top: 5px;
-  border-style: outset;
-  border-width: 7px;
-  border-top-width: 0px;
-  border-color:rgb(186, 204, 196);
   padding-top: 5px;
   padding-bottom: 5px;
+  margin-left: 10%
 }
 
 .description {
+  margin-left: 15%;
   color: black;
   text-align: left;
   font-size: smaller;
   font-weight: lighter;
   width: 70%;
-  margin-left: 15%;
+  padding-top: 30px;
 }
 
 .link_img {
-  margin: 20px;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-bottom: -10px;
-  width: 80%;
+  margin: 10px;
+  width: 90%;
   border-style: outset;
-  border-width: 7px;
+  border-width: 0px;
   border-bottom-width: 0px;
   border-color: rgb(186, 204, 196);
   padding: 0px;
