--- a/basic.css
+++ b/basic.css
@@ -183,3 +183,39 @@ embed {
 
 }
 
+@media only screen and (max-width: 600px) {
+
+
+  #top_bar {
+    width: 100%;
+    height: 20%;
+    text-align: center;
+    min-width: 0px;
+  }
+  
+  #title {
+    position: relative;
+    width: 100%;
+    left: 0%;
+    top: 3%;
+  }
+
+  #contact {
+    display: none;
+  }
+
+  #pages{
+    position: relative;
+    width: 80%;
+    margin-left: 15%;
+    left: 0%;
+    top: 0%;
+    padding-top: 30px;
+  }
+
+  #top_accent {
+    top: 20%;
+    width: 100%;
+  }
+}
+
