--- a/resume.css
+++ b/resume.css
@@ -18,3 +18,21 @@
   left: 20%;
   width: 60%;
 }
+
+@media only screen and (max-width: 600px) {
+  #res_holder {
+    width: 90%;
+    top: 30%;
+    left: 5%;
+  }
+
+  #res {
+    width: 100%;
+  }
+
+  #D_Resume {
+    position: absolute;
+    top: 28%;
+    font-size: 10px;
+  }
+}
