--- a/article.css
+++ b/article.css
@@ -24,7 +24,9 @@
 .art_text {
   text-indent: 50px;
   width: 80%;
-  left: 30px;
+  margin-left: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 @media only screen and (max-width: 600px) {
