--- a/article.css
+++ b/article.css
@@ -30,8 +30,9 @@
 }
 
 .cite_img {
-  text-size: 7px;
+  font-size: 7px;
   margin-left: 40%;
+  padding: 0px;
 }
 
 @media only screen and (max-width: 600px) {
