--- a/resume.css
+++ b/resume.css
@@ -1,13 +1,14 @@
 #D_Resume {
   position: fixed;
   top: 210px;
-  color: rgb(60, 141, 104);
+  color: rgb(255, 255, 255);
   left: 5%;
   font-size: 1vw;
 }
 
 #res {
   border-width: 5px;
+  border-color: black;
   border-style: groove;
   width: 100%;
 }
